@@ -1,0 +1,5 @@
+#
+# apt-get install
+#
+RUN apt-get install -qqy {{packages}}
+{# EOF #}
