@@ -1,4 +1,4 @@
-import os 
+import os
 import sys
 
 HERE = os.path.dirname(os.path.realpath(__file__))
