@@ -1,1 +1,5 @@
-Added velero
+New structure: each addon has a Python module and class.
+
+Add Python Click Options dynamically.
+
+Do not overlap dependencies.
